--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,17 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
   </head>
   <body style="margin: 0px; overflow: hidden">
-    <a-scene embedded arjs>
-      <a-marker type="barcode" value="62">
-        <!-- <a-entity
+    <a-scene
+      embedded
+      arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+    >
+      <a-marker type="barcode" value="38">
+        <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity> -->
-        <a-video src="assets/19096154.mp4"></a-video>
+        ></a-entity>
+        <!-- <a-video src="assets/19096154.mp4"></a-video> -->
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
