--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no,
+    minimum-scale=1.0, maximum-scale=1.0"
+    />
     <title>Document</title>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
@@ -11,15 +15,15 @@
   <body style="margin: 0px; overflow: hidden">
     <a-scene
       embedded
-      arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
       <a-marker type="barcode" value="38">
-        <a-entity
+        <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
-        ></a-entity>
-        <!-- <a-video src="assets/19096154.mp4"></a-video> -->
+        ></a-entity> -->
+        <a-video src="assets/19096154.mp4"></a-video>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
