--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         ></a-entity> -->
-        <a-video src="assets/19096154.mp4"></a-video>
+        <a-video
+          src="assets/19096154.mp4"
+          scale="3 3 3"
+          position="0 2.5 0"
+        ></a-video>
       </a-marker>
       <a-entity camera></a-entity>
     </a-scene>
