--- a/public/index.html
+++ b/public/index.html
@@ -11,19 +11,28 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script>
+      window.addEventListener("click", function () {
+        var v = document.querySelector("#vid");
+        v.play();
+      });
+    </script>
   </head>
   <body style="margin: 0px; overflow: hidden">
     <a-scene
       embedded
+      vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
-      <a-marker type="barcode" value="38">
+      <a-marker type="barcode" value="38" smooth="true">
         <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         ></a-entity> -->
         <a-video
+          id="vid"
+          autoplay
           src="assets/19096154.mp4"
           scale="3 3 3"
           position="0 2.5 0"
