--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script>
       window.addEventListener("click", function () {
-        var v = document.querySelector("#vid");
-        v.play();
+        var video = document.querySelector("#vid");
+        video.play();
       });
     </script>
   </head>
@@ -24,18 +24,21 @@
       vr-mode-ui="enabled: false"
       arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
+      <a-assets>
+        <video id="vid" autoplay src="assets/19096154.mp4"></video>
+      </a-assets>
       <a-marker type="barcode" value="38" smooth="true">
         <!-- <a-entity
           position="0 0 0"
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         ></a-entity> -->
+        <a-box color="#CB991D" depth="3" height="3" width="3"></a-box>
         <a-video
-          id="vid"
-          autoplay
-          src="assets/19096154.mp4"
+          src="#vid"
           scale="3 3 3"
-          position="0 2.5 0"
+          position="0 0 1.6"
+          rotation="0 180 0"
         ></a-video>
       </a-marker>
       <a-entity camera></a-entity>
