--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,15 @@
     <a-scene
       embedded
       vr-mode-ui="enabled: false"
-      arjs="sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
+      arjs="detectionMode: mono_and_matrix; matrixCodeType: 3x3;"
     >
       <a-assets>
-        <video id="vid" autoplay src="assets/19096154.mp4"></video>
+        <video
+          id="vid"
+          preload="auto"
+          autoplay
+          src="assets/19096154.mp4"
+        ></video>
       </a-assets>
       <a-marker type="barcode" value="38" smooth="true">
         <!-- <a-entity
@@ -33,15 +38,12 @@
           scale="0.05 0.05 0.05"
           gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"
         ></a-entity> -->
-        <a-box color="#CB991D" depth="3" height="3" width="3"></a-box>
-        <a-video
-          src="#vid"
-          scale="3 3 3"
-          position="0 0 1.6"
-          rotation="0 180 0"
-        ></a-video>
+        <!-- <a-box color="#CB991D" depth="3" height="3" width="3"></a-box> -->
+        <!--           position="0 0 1.8"  rotation="0 180 0" -->
+        <a-video src="#vid" scale="3 3 3"></a-video>
       </a-marker>
-      <a-entity camera></a-entity>
+      <a-marker-camera></a-marker-camera>
+      <!-- <a-entity camera></a-entity> -->
     </a-scene>
   </body>
 </html>
