Fix video resolution

--- a/public/index.html
+++ b/public/index.html
@@ -40,10 +40,10 @@
         ></a-entity> -->
         <!-- <a-box color="#CB991D" depth="3" height="3" width="3"></a-box> -->
         <!--           position="0 0 1.8"  rotation="0 180 0" -->
-        <a-video src="#vid" scale="3 3 3"></a-video>
+        <a-video src="#vid" scale="0.3 0.3 0.3" width="16" height="9"></a-video>
       </a-marker>
-      <a-marker-camera></a-marker-camera>
-      <!-- <a-entity camera></a-entity> -->
+      <!-- <a-marker-camera></a-marker-camera> -->
+      <a-entity camera></a-entity>
     </a-scene>
   </body>
 </html>
